# qing-taboo-finder

./: .gitignore  LICENSE  README.md  desktop.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: release.yml
data/: qing_taboo.csv
docs/: desktop-user-guide.md
examples/: tao_hua_shan_excerpt.txt
qing_taboo_finder/: __init__.py  cli.py  constants.py  csv_loader.py  detector.py  exporter.py  gui.py  models.py  segmenter.py  service.py  taboo_rules.py
qing_taboo_finder/readers/: __init__.py  base.py  docx_reader.py  epub_reader.py  txt_reader.py
tests/: test_service.py
