[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qing-taboo-finder"
version = "0.1.0"
description = "QingTabooFinder 清代避讳定位器: locate taboo-character evidence in OCRed classical Chinese texts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hang Li" }
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "EbookLib>=0.18",
  "openpyxl>=3.1.0",
  "python-docx>=1.1.0"
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0"
]

[project.scripts]
qing-taboo-finder = "qing_taboo_finder.cli:main"
qing-taboo-finder-gui = "qing_taboo_finder.gui:main"

[tool.setuptools.packages.find]
include = ["qing_taboo_finder*"]
